--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,12 @@
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
     <version>8.0.33</version>
-    </dependency> 
+    </dependency>
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.10.1</version>
+    </dependency>
 
     <dependency>
       <groupId>org.openjfx</groupId>
